<resources>
    <string name="app_name">ToDoList</string>
    <string name="to_do_hint">Remind you of (Required Field)*</string>
    <string name="to_do_title_label">To Do</string>
    <string name="description_title_label">The Description</string>
    <string name="description_hint">Reminder Description</string>
    <string name="entry_date_label">The Entry Date</string>
    <string name="reminder_date_label">The Reminder Date</string>
    <string name="is_done_box">Is Done</string>
    <string name="add_task">Add Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="save_btn">Save</string>
    <string name="sort_by_date">Sort By Date</string>
    <string name="sort_by_complete">Sort By Complete</string>
    <string name="sort_by_title">Sort By Title</string>
    <string name="filter">Filtering By Done</string>
    <string name="filter_undone">Filtering By Undone</string>
    <string name="sort_by_unComplete">Sort By UnComplete</string>


</resources>