<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_task"
        android:title="@string/add_task" />
    <item
        android:id="@+id/sort"
        android:title="@string/sort_by_date" />
    <item
        android:id="@+id/sort_by_title"
        android:title="@string/sort_by_title" />
    <item
        android:id="@+id/sort_by_complete"
        android:title="@string/sort_by_complete" />
    <item
        android:id="@+id/sort_by_unComplete"
        android:title="@string/sort_by_unComplete" />
    <item
        android:id="@+id/filter"
        android:title="@string/filter" />
    <item
        android:id="@+id/filter_undone"
        android:title="@string/filter_undone" />
</menu>
